--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.0.7
-MarkupSafe==1.0
+# MarkupSafe==1.0
 psycopg2==2.8.6
 python-dateutil==2.6.1
 python-editor==1.0.4
